# ecomm

./: .gitignore  CMakeLists.txt  README.md
ecomm-python/: LICENSE  README.md  pyproject.toml
ecomm-python/src/ecomm/: __init__.py  _typing.py  errors.py
ecomm-python/src/ecomm/channels/: __init__.py  _decode.py  async_base.py  async_tcp_channel.py  base.py  reliable.py  result.py  serial_channel.py  tcp_channel.py
ecomm-python/src/ecomm/protocol/: __init__.py  _crc_tables.py  checksum.py  compute.py  config.py  error.py  header.py  header_options.py  header_type.py  packet.py  schema.py  sequence.py  topology.py  validator.py
ecomm-python/tests/channels/: conftest.py  test_async_tcp_channel.py  test_base.py  test_channel_edge_cases.py  test_reliable_channel.py  test_serial_channel.py  test_tcp_channel.py
ecomm-python/tests/protocol/: test_checksum.py  test_compute.py  test_error.py  test_header.py  test_header_options.py  test_header_type.py  test_packet.py  test_protocol_edge_cases.py  test_schema.py  test_sequence.py  test_topology.py  test_validator.py
ecomm/channels/: arduino_serial_channel.hpp  arduino_serial_channel.tpp  arduino_wifi_channel.hpp  arduino_wifi_channel.tpp  channel.hpp  channel.tpp  channel_traits.hpp  channels.hpp  esp_async_wifi_channel.hpp  esp_async_wifi_channel.tpp  reliable_channel.hpp  reliable_channel.tpp  role.hpp  send_result.hpp
ecomm/fabric/: hub.hpp  hub.tpp  router.hpp  router.tpp
ecomm/hub/: hub.hpp  hub.tpp
ecomm/interfaces/: arduino_serial_interface.hpp  arduino_serial_interface.tpp  arduino_wifi_interface.hpp  arduino_wifi_interface.tpp  interface.hpp  interface.tpp  interfaces.hpp
ecomm/protocol/: basic_packet.hpp  basic_packet.tpp  checksum.hpp  compute.hpp  compute.tpp  config.hpp  error.hpp  error.tpp  framed_packet.hpp  framed_packet.tpp  header_layout.hpp  header_layout.tpp  header_options.hpp  header_type.hpp  node_ids.hpp  packet.hpp  packet.tpp  packet_header.hpp  packet_header.inl  packet_header.tpp  packet_layout.hpp  protocol.hpp  sequence.hpp  topology.hpp  validator.hpp  validator.tpp
examples/async_tcp/: README.md  esp32_server.cpp  pi_client.py
tests/: CMakeLists.txt
tests/channels/: test_arduino_serial_channel.cpp  test_arduino_wifi_channel.cpp  test_esp_async_wifi_channel.cpp  test_reliable_channel.cpp
tests/channels/helpers/arduino/: HardwareSerial.h  WiFi.h
tests/channels/helpers/esp/: ESPAsyncTCP.h
tests/fabric/: test_hub.cpp  test_router.cpp
tests/hub/: test_hub.cpp
tests/protocol/: test_error.cpp  test_packet.cpp  test_packet_header.cpp  test_validator.cpp
tools/: run_tests.sh
