[project]
name = "ecomm"
version = "0.1.0"
description = "Python client for the ecomm wire protocol -- byte-exact packet headers, checksums, and channels for talking to ecomm firmware from a PC or Raspberry Pi."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mark Tikhonov", email = "mtik.philosopher@gmail.com" },
]
keywords = ["ecomm", "embedded", "esp32", "esp8266", "serial", "protocol", "wire-format"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "icontract>=2.6.6",
    "beartype>=0.18.5",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/MarikTik/ecomm/tree/main/ecomm-python"
Repository = "https://github.com/MarikTik/ecomm"
Issues = "https://github.com/MarikTik/ecomm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecomm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
